# django_admin_index_modules

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
django_admin_index_modules/: admin.py  apps.py
django_admin_index_modules/static/django_admin_index_modules/admin/css/: bootstarp-grid.css
django_admin_index_modules/templates/admin/: dashboard.html  icon_app_list.html  icon_nav_sidebar.html
django_admin_index_modules/templates/admin/modules/: default.html
