[metadata]
name = django_admin_index_modules
version = 1.0.2
author = Fethi BEN ABDELHAMID
author_email = fethi.env@gmail.com
maintainer = Fethi BEN ABDELHAMID
maintainer_email = fethi.env@gmail.com
description = Django admin index modules is a Django app that gives you the ability to add widgets modules to the django admin dashboard (admin index)
long_description = file:README.md
url = https://github.com/Fethienv/django_admin_index_modules
license = MIT
keywords = django admin index widgets modules
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2